--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Enhancement
 description: Suggest an improvement, new feature, or task
-title: '[Enhancement]: '
+title: 'feat: '
 labels: ['enhancement', 'needs-triage']
 body:
   - type: markdown
