--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,7 +38,7 @@
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-sonarjs": "^3.0.2",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "typescript-eslint": "^8.33.1"
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5"
   }
 }
