--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -29,8 +29,7 @@
     {
       "files": "*.md",
       "options": {
-        "printWidth": 100,
-        "proseWrap": "always",
+        "proseWrap": "preserve",
         "tabWidth": 2,
         "useTabs": false
       }
