--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,20 +1,6 @@
 {
   "recommendations": [
     "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint",
-    "bradlc.vscode-tailwindcss",
-    "ms-vscode.vscode-typescript-next",
-    "formulahendry.auto-rename-tag",
-    "christian-kohler.path-intellisense",
-    "ms-vscode.vscode-json",
-    "usernamehw.errorlens",
-    "streetsidesoftware.code-spell-checker",
-    "github.copilot",
-    "ms-playwright.playwright",
-    "ms-vscode.test-adapter-converter"
-  ],
-  "unwantedRecommendations": [
-    "ms-vscode.vscode-typescript",
-    "hookyqr.beautify"
+    "dbaeumer.vscode-eslint"
   ]
-} 
+}
