fix: use correct linter configurations

--- a/.github/workflows/project-automation.yml
+++ b/.github/workflows/project-automation.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Add to project
         uses: actions/add-to-project@244f685bbc3b7adfa8466e08b698b5577571133e # v1.0.2
         with:
-          project-url: ${{ env.PROJECT_URL }}
+          project-url: ${{ vars.PROJECT_URL }}
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
 
   # Smart labeling and project structure integration
