--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0"
   },
-  "packageManager": "pnpm",
+  "packageManager": "pnpm@10.10.0",
   "engines": {
     "node": ">=24.0.0",
     "pnpm": ">=10.0.0"
