--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "format:fix": "prettier --write --list-different .",
-    "check-all": "npm run type-check && npm run lint:strict && npm run format:check",
+    "check-all": "pnpm run type-check && pnpm run lint:strict && pnpm run format:check",
     "prepare": "husky"
   },
   "dependencies": {
@@ -25,12 +25,14 @@
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0"
   },
+  "packageManager": "pnpm@10.10.0",
   "engines": {
     "node": ">=24.0.0",
-    "npm": ">=11.0.0"
+    "pnpm": ">=10.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.28.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
     "@types/react": "^19",
