--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start",
     "lint": "next lint --fix",
     "lint:strict": "next lint --max-warnings 0",
+    "lint:md": "markdownlint \"**/*.md\" --fix",
+    "lint:md:check": "markdownlint \"**/*.md\"",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "format:fix": "prettier --write --list-different .",
-    "check-all": "pnpm run type-check && pnpm run lint:strict && pnpm run format:check",
+    "check-all": "pnpm run type-check && pnpm run lint:strict && pnpm run lint:md:check && pnpm run format:check",
     "prepare": "husky"
   },
   "dependencies": {
@@ -27,7 +29,7 @@
   },
   "packageManager": "pnpm@10.10.0",
   "engines": {
-    "node": ">=24.0.0",
+    "node": ">=22.0.0",
     "pnpm": ">=10.0.0"
   },
   "devDependencies": {
@@ -51,6 +53,7 @@
     "eslint-plugin-sonarjs": "^3.0.2",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
+    "markdownlint-cli": "^0.43.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
