feat(setup): add minimal foundation dependencies and layouts
- Add TanStack Form and Zod dependencies per ADR 001
- Add minimal Shadcn/ui components for layout design (button, card, navigation-menu, separator)
- Replace Next.js starter with simpler homepage
- Configure VS Code settings for Tailwind CSS validation and IntelliSense
- Add Prettier plugin for Tailwind class sorting
- Add fix-all script for development workflow

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -18,6 +18,7 @@
   "requirePragma": false,
   "vueIndentScriptAndStyle": false,
   "experimentalTernaries": false,
+  "plugins": ["prettier-plugin-tailwindcss"],
   "overrides": [
     {
       "files": "*.json",
