--- a/package.json
+++ b/package.json
@@ -15,17 +15,25 @@
     "format:check": "prettier --check .",
     "format:fix": "prettier --write --list-different .",
     "check-all": "pnpm run type-check && pnpm run lint:strict && pnpm run lint:md:check && pnpm run format:check",
+    "fix-all": "pnpm run type-check && pnpm run lint && pnpm run format",
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-form": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "next-intl": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.56"
   },
   "packageManager": "pnpm@10.10.0",
   "engines": {
@@ -35,6 +43,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.28.0",
+    "@storybook/react-vite": "^9.0.6",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
     "@types/react": "^19",
@@ -55,6 +64,8 @@
     "lint-staged": "^16.1.0",
     "markdownlint-cli": "^0.43.0",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "storybook": "^9.0.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
