fix(ci): align linting workflows with tailwind v4 and super-linter requirements
- Add CSS linting with stylelint for Tailwind v4 compatibility
- Update Super Linter configuration to avoid duplicate linting
- Fix markdown linting to ignore node_modules files
- Add CSS linting steps to development scripts and CI workflow
- Install stylelint dependencies for CSS validation

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Lint code
         run: pnpm run lint:strict
 
+      - name: Lint CSS
+        run: pnpm run lint:css:check
+
       - name: Check formatting
         run: pnpm run format:check
 
@@ -69,10 +72,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: false
+          # Disable linters already handled by quality-checks job
           VALIDATE_JSON: false
           VALIDATE_JSCPD: false
           VALIDATE_TYPESCRIPT_ES: false
           VALIDATE_JAVASCRIPT_ES: false
+          VALIDATE_CSS: false
 
   quality-gate:
     runs-on: ubuntu-latest
