--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "start": "next start",
     "lint": "next lint --fix",
     "lint:strict": "next lint --max-warnings 0",
-    "lint:md": "markdownlint \"**/*.md\" --fix",
-    "lint:md:check": "markdownlint \"**/*.md\"",
+    "lint:css": "stylelint \"**/*.css\" --fix",
+    "lint:css:check": "stylelint \"**/*.css\"",
+    "lint:md": "markdownlint \"**/*.md\" --ignore \"node_modules/**/*.md\" --fix",
+    "lint:md:check": "markdownlint \"**/*.md\" --ignore \"node_modules/**/*.md\"",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "format:fix": "prettier --write --list-different .",
-    "check-all": "pnpm run type-check && pnpm run lint:strict && pnpm run lint:md:check && pnpm run format:check",
-    "fix-all": "pnpm run type-check && pnpm run lint && pnpm run format",
+    "check-all": "pnpm run type-check && pnpm run lint:strict && pnpm run lint:css:check && pnpm run lint:md:check && pnpm run format:check",
+    "fix-all": "pnpm run type-check && pnpm run lint && pnpm run lint:css && pnpm run format",
     "prepare": "husky"
   },
   "dependencies": {
@@ -66,6 +68,8 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
     "storybook": "^9.0.6",
+    "stylelint": "^16.20.0",
+    "stylelint-config-standard": "^38.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
