refactor(design): modernize landing page and consolidate form system
- update landing page to use shadcn Pro Blocks patterns
- set blue (#16385d) as primary color in design system
- replace custom CSS with shadcn design variables and classes
- fix button styling to use proper shadcn variants

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,nextjs,linux,windows,macos,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,nextjs,linux,windows,macos,visualstudio
 
+### Project specific ###
+
+docs/transient
+
 ### Linux ###
 *~
 
