fix(forms): display validation errors to users instead of console only
- Fix FormMessage component to properly extract TanStack Form errors
- Replace custom error display with FormMessage in FormField and FormRadioGroup
- Update PhoneField to show errors for both number and country code fields
- Add ValidationError component for step-level validation feedback
- Display step validation errors in MultiStepForm with dismiss option
- Add proper error parsing for Zod validation messages

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -83,6 +83,10 @@ jobs:
           VALIDATE_JSX: false
           VALIDATE_CSS: false
           # Disable Prettier linters to avoid plugin conflicts
+          # TODO: Wait for fix or find a workaround for:
+          # https://github.com/super-linter/super-linter/issues/6089
+          VALIDATE_TYPESCRIPT_STANDARD: false
+          VALIDATE_TYPESCRIPT_PRETTIER: false
           VALIDATE_JSON_PRETTIER: false
           VALIDATE_MARKDOWN_PRETTIER: false
           VALIDATE_YAML_PRETTIER: false
