--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "15.3.3",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
@@ -68,6 +69,7 @@
     "@storybook/react-vite": "^9.0.6",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
+    "@types/qrcode.react": "^3.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
