feat(pdf): add e-ticket PDF generation with QR codes
- Add @react-pdf/renderer and qrcode dependencies
- Create PDF generation API endpoint at /api/generate-pdf
- Implement PDF download functionality in success page
- Generate real QR codes using application UUID for customs validation
- Use design system primary color for PDF styling
- Match official Dominican Republic E-Ticket format with tables and layout
- Add modular PDF components (DateTable, FlightTable, QRCodeSection, PassengersTable)
- Include proper error handling and fallback mechanisms

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-form": "^1.12.2",
@@ -49,6 +50,7 @@
     "next": "15.3.3",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.7.0",
@@ -69,7 +71,7 @@
     "@storybook/react-vite": "^9.0.6",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
-    "@types/qrcode.react": "^3.0.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
