--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "countries-list": "^3.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
+    "mrz": "^4.2.1",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
@@ -58,6 +59,7 @@
     "react-phone-number-input": "^3.4.12",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
+    "tesseract.js": "^6.0.1",
     "zod": "^3.25.56"
   },
   "packageManager": "pnpm@10.10.0",
