--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-phone-number-input": "^3.4.12",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
+    "tesseract.js": "6.0.1",
     "zod": "^3.25.56"
   },
   "packageManager": "pnpm@10.10.0",
